# jxp

./: .gitignore  README.md  pyproject.toml  rxconfig.py
jxp/: __init__.py  jxp.py
jxp/ui/: __init__.py  navigation.py  state.py  styles.py
jxp/ui/components/: sidebar.py
jxp/ui/pages/: __init__.py  file_page.py  image_page.py  onboard_page.py  user_page.py
src/jxp/: __init__.py
src/jxp/agent/: loop.py
src/jxp/cli/commands/: __init__.py  commands.py
src/jxp/config/: __init__.py  loader.py  router.py  schema.py
src/jxp/test/: run_bash.py
