[project]
name = "jxp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jiaxiaopeng", email = "" }
]
keywords = ["ai", "agent", "chatbot"]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.24.1",
]

[project.scripts]
nanobot = "jxp.cli.commands:app"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
