[project]
name = "jxp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jiaxiaopeng", email = "" }
]
keywords = ["ai", "agent", "chatbot"]
requires-python = ">=3.11"
dependencies = [
    "crawlee>=1.0.0",
    "bs4>=0.0.2",
    "loguru>=0.7.3",
    "playwright>=1.40",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "typer>=0.24.1",
    "reflex>=0.8.28.post1",
]

[project.scripts]
nanobot = "jxp.cli.commands.commands:app"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
